# ktalk-mcp

./: CLAUDE.md  LICENSE  README.md  pyproject.toml  talk.public.api-api-2.json
.github/workflows/: publish.yml
docs/superpowers/plans/: 2026-04-02-ktalk-mcp-execution-prompt.md  2026-04-02-ktalk-mcp.md
docs/superpowers/specs/: 2026-04-02-ktalk-mcp-design.md
src/ktalk_mcp/: __init__.py  __main__.py  client.py  config.py  formatters.py  server.py
tests/: conftest.py  test_client.py  test_config.py  test_formatters.py
