[project]
name = "ktalk-mcp"
version = "0.1.0"
description = "MCP server for accessing Kontur Talk (KTalk) recordings, transcripts and summaries"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.28.0",
    "pydantic-settings>=2.0.0",
]

[project.scripts]
ktalk-mcp = "ktalk_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25.0",
    "pytest-httpx>=0.35.0",
    "ruff>=0.11.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
