[project]
name = "ktalk-mcp"
version = "0.2.2"
description = "MCP server for accessing Kontur Talk (KTalk) recordings, transcripts and summaries"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Maksim Demyanov", email = "mdemyanov@users.noreply.github.com" },
]
keywords = ["mcp", "ktalk", "kontur", "recordings", "transcripts"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Conferencing",
]
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.28.0",
    "pydantic-settings>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/mdemyanov/ktalk-mcp"
Repository = "https://github.com/mdemyanov/ktalk-mcp"
Issues = "https://github.com/mdemyanov/ktalk-mcp/issues"

[project.scripts]
ktalk-mcp = "ktalk_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25.0",
    "pytest-httpx>=0.35.0",
    "ruff>=0.11.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
